FIX: Remove the overflow: hidden from carousel component

--- a/styles/modules/carousel.module.css
+++ b/styles/modules/carousel.module.css
@@ -14,7 +14,6 @@
   opacity: 0.4;
   transition: opacity 0.4s;
   position: relative;
-  overflow: hidden;
 }
 .active {
   opacity: 1;
